--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
     <h2>Como utilizar o Git/GitHub</h2>
     <b>comandos:</b><br>
-    <p>os comandos serão explicados aqui.</p>
+    <p>os comandos serão explicados aqui.<br>
+    <ol>teste de listagem
+        <ul>so teste</ul>
+    </ol></p>
 </body>
 </html>
