--- a/index.html
+++ b/index.html
@@ -4,16 +4,43 @@
 <head>
     <meta charset="UTF-8" />
     <title>GIT/GITHUB how to use</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             width: 800px;
             margin: 0 auto;
         }
     </style>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </head>
 
-<body>
+<body
     <h2>Como utilizar o Git/GitHub</h2>
+    <img src="/prints do projeto/GitHub_Invertocat_Logo.svg">
     <p><b>GIT: </b>sistema versionamento de arquivos, que permite ter controle de
         tudo que já foi realizado ou alterado em um arquivo. Em que várias pesso
         as podem modificar o mesmo arquivo de diferentes dispositivos.</p>
@@ -21,7 +48,7 @@
         utilizados no GIT.
     </p>
     <ul>
-        <li>REPOSITORIOS: são os diretórios do GIT para armazenar projetos, os códigos
+        <li><mark>REPOSITÓRIOS:</mark> são os diretórios do GIT para armazenar projetos, os códigos
             podem ser compartilhados para outras pessoas. Muito usado para trabalhos em
             equipe. Extremamente importante no mercado de trabalho, principalmente
             para área de computação (desenvolvimento), podem ser adicionadas novas
