--- a/audio.html
+++ b/audio.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <h5>Áudio será inserido aqui.</h5>
+    <audio src="audio/audioprojetogit.mp4" controls></audio>
 </body>
 
 </html>
