--- a/index.html
+++ b/index.html
@@ -42,14 +42,25 @@
         as podem modificar o mesmo arquivo de diferentes dispositivos.</p>
     <p><b>GIT HUB: </b>é uma plataforma para hospedar arquivos que estão sendo
         utilizados no GIT.
+    </p> -Para usar o Git/GitHub faça os seguintes passos:</p>
+    <ol>
+        <li>Acesse <a href="https://github.com/">https://github.com/</a> e crie uma conta no GitHub.</li>
+        <li>Crie um novo repositório no GitHub.</li>
+        <li>Copie o URL do repositório criado.</li>
+        <li>No computador, vá até o diretório do projeto usando o terminal.</li>
+        <li>Use o comando git init para inicializar um repositório Git local.</li>
+        <li>Faça a coxexão do repositório local com repositório remoto no GitHub com o comando git remote add origin
+            URL_do_repositório.</li>
+        <li>Use os comandos Git (por exemplo, git add, git commit, git push) para adicionar e modificar arquivos no
+            repositório do GitHub.</li>
+    </ol>
+
+    <p><mark>REPOSITÓRIOS:</mark> são os diretórios do GIT para armazenar projetos, os códigos
+        podem ser compartilhados para outras pessoas. Muito usado para trabalhos em
+        equipe. Extremamente importante no mercado de trabalho, principalmente
+        para área de computação (desenvolvimento), podem ser adicionadas novas
+        versões a partir de um post.
     </p>
-    <ul>
-        <li><mark>REPOSITÓRIOS:</mark> são os diretórios do GIT para armazenar projetos, os códigos
-            podem ser compartilhados para outras pessoas. Muito usado para trabalhos em
-            equipe. Extremamente importante no mercado de trabalho, principalmente
-            para área de computação (desenvolvimento), podem ser adicionadas novas
-            versões a partir de um post.</li>
-    </ul>
 
     <p><b>Status: </b>mostra o que está acontecendo no projeto. Ele mostra uma serie de
         informações como a branch atual, o último commit e branches remotos, estado do
@@ -138,8 +149,8 @@
 
     <p>
         <b>Rm: </b>remove arquivos e diretórios.
-        <li>rm nomearquivo → remove um arquivo.</li>
-        <li>rm -r nomediretorio → remove um diretório incluindo todos os arquivos armazenados nele.</li>
+        <li>git rm nomearquivo → remove um arquivo.</li>
+        <li>git rm -r nomediretorio → remove um diretório incluindo todos os arquivos armazenados nele.</li>
     </p>
 
     <p>
@@ -232,17 +243,37 @@
     <p>
         <b>Stash: </b> permite que sejam guardadas as alterações, assim o usuário consegue limpar o diretório local,
         mudar de branch.
-        <li>git stash save nomestash → cria um stash com as alterações realizadas.</li>
-        <li>git stash pop → coloca as alterações relizadas no repositório local.</li>
     </p>
+    <table border="1">
+        <tr>
+            <td>git stash save nomestash  </td>
+            <td>→ cria um stash com as alterações realizadas.</td>
+        </tr>
+        <tr>
+            <td>git stash pop </td>
+            <td>→ coloca as alterações relizadas no repositório local.</td>
+        </tr>
+    </table><br>
 
     <p>
-        <b>Diff: </b>possibilita verificar alterações realizadas com diversas informações nos arquivos do diretório local 
+        <b>Diff: </b>possibilita verificar alterações realizadas com diversas informações nos arquivos do diretório
+        local
         do trabalho, além de mostrar as diferenças entre os commits executados.
         <li>git diff → mostra as modificações de todos os arquivos do diretório de trabalho.</li>
         <li>git diff nomearquivo → mostra as modifcações de um arquivo desejado.</li>
         <li>git diff nomecommit1 nomecommit2 → mostrar as diferenças entre dois commits desejados,.</li>
     </p>
+    <small>Trabalho realizado por Pedro Medina Stracieri & Vinícius Gomes.</small>
+    <table>
+        <tr>
+            <td>aslba</td>
+            <td>asfadg</td>
+        </tr>
+        <tr>
+            <td>lfgk</td>
+            <td>lfgk</td>
+        </tr>
+    </table>
 </body>
 
 </html>
