--- a/video.html
+++ b/video.html
@@ -35,7 +35,9 @@
 </head>
 
 <body>
-    <h5>Vídeo seá inserido aqui.</h5>
+    <video width="640" height="360" controls>
+        <source src="video/Video(teste).mp4" type="video/mp4">
+      </video>
 </body>
 
 </html>
