--- a/index.html
+++ b/index.html
@@ -263,7 +263,12 @@
         <li>git diff nomearquivo → mostra as modifcações de um arquivo desejado.</li>
         <li>git diff nomecommit1 nomecommit2 → mostrar as diferenças entre dois commits desejados,.</li>
     </p>
-    <small>Trabalho realizado por Pedro Medina Stracieri & Vinícius Gomes.</small>
+    <small>
+        Trabalho realizado por Pedro Medina Stracieri & Vinícius Gomes.<br>
+        Professor: Ricardo Menezes<br>
+        Matéria: Introdução à ciência da computação<br>
+        Universidade Federal de Alfenas<br>
+    </small>
 </body>
 
 </html>
